# solana-zk

./: LICENSE  README.md  package-lock.json  package.json
circuits/: Multiplier.circom
solana-program/: Cargo.toml
solana-program/src/: lib.rs
tests/: zk.spec.ts
web/src/app/: app-routes.tsx
web/src/app/ui/: ui-layout.tsx
