[package]
name = "groth16-test"
version = "0.1.0"
description = "groth16-solana test program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groth16_test"

[dependencies]
solana-program = "1.16.15"
thiserror = "1.0"
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
groth16-solana = "0.0.2"


[dev-dependencies]
ark-std = "0.4.0"
array-bytes = "6.2.2"
serde = "1.0.195"
serde_json = "1.0.111"
